# offside-labs-studio

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.cjs  CLAUDE.md  DEMO.md  MEMORY.md  PLAN.md  PRD.md  PROMPT.md  README-RUN-LOCAL.md  README.md  ROADMAP.md  TESTING.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
backend/: .dockerignore  .env.sample  Dockerfile  Procfile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/apps/: __init__.py
backend/apps/activities/: admin.py  apps.py  models.py  serializers.py  signals.py  types.py  urls.py  views.py
backend/apps/activities/migrations/: 0001_initial.py
backend/apps/activities/tests/: test_activities.py
backend/apps/ai/: admin.py  client.py  exceptions.py  models.py  prompts.py  services.py
backend/apps/automations/: actions.py  admin.py  apps.py  exceptions.py  graph.py  hitl.py  models.py  serializers.py  tasks.py  triggers.py  urls.py  views.py
backend/apps/companies/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/contacts/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/custom_fields/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/deals/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/health/: urls.py  views.py
backend/apps/imports/: admin.py  apps.py  mappings.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/marketplace/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/notes/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/tasks/: admin.py  models.py  serializers.py  views.py
backend/apps/users/: admin.py  managers.py  models.py  serializers.py
backend/apps/users/tests/: test_auth.py
backend/apps/workspaces/: admin.py  authentication.py  managers.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
backend/offside_crm/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/offside_crm/settings/: __init__.py  base.py  dev.py  prod.py
(+135 files in other folders)
