# Python version pin — coordinated across four places. Keep in sync:
#   - backend/.python-version           → pyenv / asdf / mise auto-switch on cd
#   - backend/Dockerfile                → `FROM python:3.12-slim`
#   - .github/workflows/ci.yml          → setup-python python-version: "3.12"
#   - [project] requires-python below   → pip refuses install on wrong interpreter
# Plus the per-tool python_version pins on [tool.ruff] and [tool.mypy] below.

[project]
name = "offside-crm-backend"
version = "0.0.0"
description = "OffsideStudio — Agent Marketplace backend (Django + DRF + Celery + custom durable workflow runtime)."
requires-python = ">=3.12,<3.14"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "migrations",
    "staticfiles",
    "mediafiles",
]

[tool.ruff.lint]
select = [
    "E", "W",      # pycodestyle
    "F",           # pyflakes
    "I",           # isort
    "B",           # flake8-bugbear
    "UP",          # pyupgrade
    "C4",          # flake8-comprehensions
    "DJ",          # flake8-django
    "S",           # flake8-bandit (security)
    "N",           # pep8-naming
    "RUF",         # ruff-specific
]
ignore = [
    "E501",        # line-too-long — handled by formatter
    "S101",        # assert (used in tests)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S", "N"]
"**/migrations/**" = ["E", "F", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["migrations", "staticfiles"]

[tool.django-stubs]
django_settings_module = "offside_crm.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "offside_crm.settings.dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-ra --strict-markers --tb=short"
testpaths = ["apps", "tests"]
